components/disaster-recovery/rings/ring-1/base/networkpolicy_allow_el_from_ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-el-from-namespace
  namespace: konflux-disaster-recovery
spec:
  podSelector:
    matchLabels:
      eventlistener: cron-listener
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: konflux-disaster-recovery
    ports:
    - protocol: TCP
      port: 8080
